--- a/style.css
+++ b/style.css
@@ -68,8 +68,6 @@ h1{
 
 @media (max-width:600px){
     .end{
-        position:absolute;
-        top: 70px;
-        left: 170px;
+       display: none;
     }
 }
